--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "amazon-clone",
   "version": "0.1.0",
   "engines": {
+    "npm": "7.24.0",
     "node": "14.16.0"
   },
   "private": true,
@@ -19,6 +20,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "heroku-postbuild": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
